--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -8,7 +8,7 @@
     border-radius: 10px;
     padding: 70px 90px 70px 70px;
     width: 400px;
-    height: 300px;
+    min-height: 300px;
 }
 
 .label-login {
