--- a/src/styles/util.css
+++ b/src/styles/util.css
@@ -1,2 +1,9 @@
 .mt-50 {margin-top: 50px;}
+.mt-5 {margin-top: 5px;}
+
+.mr-10 {margin-right: 10px;}
+
 .mb-20 {margin-bottom: 20px;}
+.mb-5 {margin-bottom: 5px;}
+
+.ml-10 {margin-left: 10px;}
