--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -85,15 +85,22 @@
     min-width: 150px;
 }
 
+div.right-align > span {
+    margin-bottom: 6px;
+}
+
 .left-align {
     align-items: flex-start;
+}
+
+div.left-align > span {
+    margin-bottom: 6px;
 }
 
 .input-field {
     height: 28px;
     font-size: 12px;
     width: 300px;
-    margin-bottom: 6px;
 }
 
 #t span{
