--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -103,6 +103,41 @@ div.left-align > span {
     width: 300px;
 }
 
-#t span{
-    margin-top: 3.5px;
+.section-wrapper {
+    max-width: 1100px;
+    margin: auto;
+}
+
+.section-heading {
+    height: 45px;
+    font-size: 25px;
+    font-weight: bold;
+    line-height: 40px;
+}
+
+.view-heading {
+    height: 45px;
+    font-size: 25px;
+    font-weight: bold;
+    line-height: 40px;
+    margin-left: 125px;
+}
+
+.link {
+    color: black;
+    font-weight: normal;
+    text-align: center;
+    padding: 12px 10px;
+    text-decoration: none;
+    font-size: 15px;
+    border: 2px solid #008cba;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    white-space: nowrap;
+    margin: 0px 5px;
+}
+
+.link:hover {
+    background-color: #008cba;
+    color: white;
 }
