--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,6 +38,11 @@
     align-items: baseline;
 }
 
+.flex-column {
+    display: flex;
+    flex-direction: column;
+}
+
 .button-login {
     padding: 12px 32px;
     text-align: center;
