--- a/src/styles/util.css
+++ b/src/styles/util.css
@@ -2,9 +2,11 @@
 .mt-25 { margin-top: 25px; }
 .mt-50 { margin-top: 50px; }
 
+.mr-5 { margin-right: 5px; }
 .mr-10 { margin-right: 10px; }
 
 .mb-5 { margin-bottom: 5px; }
+.mb-10 { margin-bottom: 10px; }
 .mb-20 { margin-bottom: 20px; }
 .mb-25 { margin-bottom: 25px; }
 
