--- a/src/styles/util.css
+++ b/src/styles/util.css
@@ -1,4 +1,7 @@
+/* margin */
+
 .mt-5 { margin-top: 5px; }
+.mt-10 { margin-top: 10px; }
 .mt-25 { margin-top: 25px; }
 .mt-50 { margin-top: 50px; }
 
@@ -12,3 +15,10 @@
 
 .ml-10 { margin-left: 10px; }
 .ml-20 { margin-left: 20px; }
+
+/* padding */
+
+.pl-15 { padding-left: 15px; }
+
+.p-1-rem { padding: 1rem; }
+.p-3-rem { padding: 3rem; }
